# TinyOS

./: .gitignore  CMakeLists.txt  Makefile  README  README.txt  TODO  kernel.map
arch/: arch.h  arch.mk  data.S  exception.S  exception.c  handler.S  helpers.S  linker.ld.S  macros.S  mmu.S  proc_reg.h  start.S  timer.S
config/: MasterVersion  VersionGenerator.py  version.cmake  version.h.j2  version.py
docs/: booting.txt  cpu.txt  memory-management.txt  memory.txt  mm.txt
drivers/: drivers.mk
drivers/irq/: irq-gicv3.c  irq-gicv3.h
drivers/irqs/: irq-gicv3.c  irq-gicv3.h
drivers/pl011/: pl011.c  pl011.h
dts/: tiny-ex1.dtsi
kern/: cpu.c  cpu.h  defaults.h  exception.c  kdebug.c  kdebug.h  kern.mk  kprintf.c  kprintf.h  linker.lds  machine.c  machine.h  main.c  startup.h  task.c  task.h  version.h
kern/machine/: machine-irq.c  machine-irq.h  machine_irq.c  machine_irq.h  machine_timer.c  machine_timer.h
kern/mm/: zalloc.c  zalloc.h
kern/vm/: pmap.c  pmap.h  vm.c  vm.h  vm_map.c  vm_map.h  vm_page.c  vm_page.h  vm_types.h  vm_walk.c
libfdt/: fdt.c  fdt_overlay.c  fdt_ro.c  fdt_rw.c  fdt_sw.c  fdt_wip.c
libkern/: assert.h  bitmap.h  boot.h  compiler.h  libkern.mk  list.h  panic.c  panic.h  queue.c  queue.h  types.h  version.h
platform/: devicetree.c  devicetree.h  platform.c  platform.h  platform.mk
scripts/: boot.py
tinylibc/: _types.h  libc.mk  stddef.h
tinylibc/string/: memcpy.c  memset.c
